Changes since CEXP-1.5
 2005/11/5:
 - Updated README to explain how to use libcexp from a program.
 2005/11/4:
 - Created '--disable-opcodes' configure option. Updated README
   to give info about linker helper script generation with 
   xsyms -C.
 - Use clean-local: target to remove libelf local install dir.
 - elfsyms.c fix; remove obsolete free_regexp leftover.
 - updated tested configurations in INSTALL.
 2005/11/3:
 - Silenced compiler warnings (vars.c) by using appropriate 'lh'
   type. Use my_sigismember() to avoid conflict with declaration
   in header. Silenced more warnings.
 - Removed strncmp() from libiberty.

Changes since CEXP-1.4.beta ("Helvetia")
 2004/10/29:
 - BFD file loader now searches PATH environment variable for object
   files (non-absolute names only, of course).
 - plugged a few minor memory leaks
 2004/5/20:
 - New syntax: '< scriptfile' implemented
 - Implemented 'builtin' symbol tables. 'xsyms' can help generating
   a symbol table in C source form. (Similar support was added to
   the 'ldep' tool as well).
 - NOTE: THE INTERFACE DEFINED IN cexpHelp.h HAS SLIGHTLY CHANGED
   (help tables now need a 'module-specific' name qualifier). Thus,
   more than one table can be defined in a single file. It makes
   future 'directory' support easier.
 2004/3/5:
 - NOTE: THE INTERFACE TO cexpModuleInfo() (order of parameters)
         HAS CHANGED, SORRY.
 - Added support for m68k cache flushing (RTEMS only)
 - Help supporting GDB (in the future - not implemented yet) by
   keeping section address info. Using the 'gencore.c' utility
   (distributed separately - mail me), we can use GDB to analyze
   core dumps already, however. Added cexpModuleDumpGdbSectionInfo().
 - added verbosity level to cexpModuleInfo() [--> interface for
   that routine *changed* ]
 - small grammar bugfix: declaration of a new variable should
   only be executed if expression evaluation is not disabled
   (as a result of && ||). Impact is probably none as variable